--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,20 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+footer {
+  background: #333;
+  color: #fff;
+  height: 40px;
+  padding-top: 10px;
+  margin-top: 20px;
+  text-align: center;
 }
 
-a {
-  color: #00B7FF;
+.heading {
+  background: #666;
+  color: #fff;
+  padding: 5px;
+}
+
+.article {
+  border-bottom: #ccc solid 1px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
