--- a/public/views/add_article.view.html
+++ b/public/views/add_article.view.html
@@ -7,9 +7,9 @@
       <input ng-model="title" type="text" class="form-control" id="title" placeholder="Title" name="title">
     </div>
     <div class="form-group">
-      <label>Title</label>
+      <label>Category</label>
       <select ng-model="category" class="form-control" id="category" name="category">
-        <option ng-repeat="" value=""></option>
+        <option ng-repeat="category in categories" value="{{category.name}}">{{category.name}}</option>
       </select>
     </div>
     <div class="form-group">
