added in ability to edit articles

--- a/public/views/article_details.view.html
+++ b/public/views/article_details.view.html
@@ -7,7 +7,7 @@
   <div>{{article.body}}</div>
   <br /><br />
   <div class="actions">
-    <a href="#/articles/edit/{{article._id}}" class="btn btn-default">Edit</a>
+    <a href="#/article/edit/{{article._id}}" class="btn btn-default">Edit</a>
     <a href="#" class="btn btn-danger" ng-click="removeArticle()">Delete</a>
   </div>
 </div>
