--- a/public/views/edit_article.view.html
+++ b/public/views/edit_article.view.html
@@ -1,1 +1,23 @@
-Edit Article
+<div ng-controller="ArticleEditCtrl">
+  <h3>Edit Article</h3>
+
+  <form ng-submit="editArticle()">
+    <div class="form-group">
+      <label>Title</label>
+      <input ng-model="article.title" type="text" class="form-control" id="title" placeholder="Title" name="title">
+    </div>
+    <div class="form-group">
+      <label>Category</label>
+      <select ng-model="article.category" class="form-control" id="category" name="category">
+        <option ng-repeat="category in categories" value="{{category.name}}">{{category.name}}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Body</label>
+      <textarea ng-model="article.body" class="form-control" id="body" placeholder="Enter article text ..." name="body"></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-default">Submit</button>
+    <a class="btn btn-danger" href="#/categories">Cancel</a>
+  </form>
+</div>
